test/functions/iterators/diten/iteratorNoYield.good
iteratorNoYield.chpl:6: error: iterators must yield values
